syntax = "proto3";

option csharp_namespace = "QuizMaster.API.QuizSession.Protos";

service QuizRoomService{
	rpc CreateRoom (CreateRoomRequest) returns (RoomResponse);
	rpc GetAllRoom (RoomsEmptyRequest) returns (RoomResponse);
	rpc DeleteRoom (ModifyRoomRequest) returns (RoomResponse);
	rpc UpdateRoom (CreateRoomRequest) returns (RoomResponse);
	rpc GetQuizSet (SetRequest) returns (RoomResponse);
	rpc GetQuiz (SetRequest) returns (RoomResponse);
	rpc GetQuestion(SetRequest) returns (RoomResponse);
	rpc SaveRoomData(Data) returns (RoomResponse);
	rpc GetRoomData(Data) returns (RoomResponse);
	rpc GetAllRoomData(Data) returns (RoomResponse);
	rpc SaveParticipants(Data) returns (RoomResponse);
	rpc DeactivateRoomRequest(DeactivateRoom) returns (RoomResponse);
}

message Data{
	string value = 1;
}

message ModifyRoomRequest{
	int32 room = 1;
}

message CreateRoomRequest{
	string room  = 1;
}

message RoomResponse{
	int32 code = 1;
	string data  =2;
	string message = 3;
}

message RoomsEmptyRequest{}

message SetRequest{
	int32 id=1;
}

message DeactivateRoom{
	int32 id =1;
}